# project-euler

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  pyproject.toml
src/: p1.ipynb  p1.py  p2.ipynb  p2.py  p3.ipynb  p3.py  p4.py  p5.py  p6.py
