[tool.poetry]
name = "project-euler"
version = "0.1.0"
description = ""
authors = ["Justin Hoang <72476123+suasuasuasuasua@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
